--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DojoHerokuAngular</title>
+  <title>Mercado Libre Colombia</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://http2.mlstatic.com/ui/navigation/5.3.7/mercadolibre/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet">
 </head>
 
 <body>
